--- a/index.html
+++ b/index.html
@@ -41,24 +41,18 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Market</a>
+                        <a class="nav-link" href="/markets">Markets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Exchange</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Documents</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Announcement</a>
+                        <a class="nav-link" href="/trade">Exchange</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn-signup" href="#">Sign up</a>
+                        <a class="nav-link btn-signup" href="/create">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn-login" href="#">Login</a>
+                        <a class="nav-link btn-login" href="/unlock">Login</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
