--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="subheading mt-3">100% secured Peer to Peer trading - powered by TomoChain technologies</div>
                 <div class="box-btn mt-3 pt-3 mt-md-5 pt-md-5">
                     <a class="btn btn-primary d-flex d-md-inline-flex align-items-center justify-content-center"
-                        href="#"><i class="dex-multiline_chart"></i> Start Trading</a>
+                        href="/trade"><i class="dex-multiline_chart"></i> Start Trading</a>
                     <a class="btn btn-primary-transparent d-flex d-md-inline-flex align-items-center justify-content-center ml-md-3 mt-3 mt-md-0"
                         href="#"><i class="dex-play_circle_outline"></i> Watch videos</a>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="common-preview mb-5">
                         <h2 class="common-title mr-4 mr-md-5">Market</h2>
                         <p class="common-meta">42 coins listed</p>
-                        <a class="common-link" href="#">View all</a>
+                        <a class="common-link" href="/markets">View all</a>
                     </div>
                     <div class="table-responsive">
                         <table class="table tomodex-table">
