--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             </p>
                         </div>
                         <div class="d-flex align-items-end w-100 mt-5">
-                            <a class="btn-primary-medium w-100 d-flex align-items-center justify-content-center">Start Trading</a>
+                            <a class="btn-primary-medium w-100 d-flex align-items-center justify-content-center" href="/trade">Start Trading</a>
                         </div>
                     </div>
                 </div>
@@ -344,7 +344,7 @@
                             </p>
                         </div>
                         <div class="d-flex align-items-end w-100 mt-5">
-                            <a class="btn-primary-medium w-100 d-flex align-items-center justify-content-center">Start Trading</a>
+                            <a class="btn-primary-medium w-100 d-flex align-items-center justify-content-center" href="https://github.com/tomochain/tomoxjs">Try it</a>
                         </div>
                     </div>
                 </div>
