--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="/"><img src="assets/images/logo-tomodex.svg" alt="logo-tomodex"></a>
+            <a class="navbar-brand" href="/"><img src="assets/images/logo-tomo-white.png" alt="logo-tomodex"></a>
             <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -336,7 +336,7 @@
                 <div class="row">
                     <div class="col-lg-3 mt-5">
                         <div class="footer-logo text-center text-md-left">
-                            <img src="assets/images/dex-logo-black.svg" alt="Tomochain">
+                            <img src="assets/images/logo-tomo-black.png" alt="Tomochain">
                         </div>
                         <ul class="social-list d-flex align-items-center justify-content-between mt-4">
                             <li class="social-item">
