Format title heading

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="site-heading">
                 <h1>Instant Exchange<br>
-                    - Directly From Your Wallet</h1>
+                    Directly From Your Wallet</h1>
                 <div class="subheading mt-3">100% secured Peer to Peer trading - powered by TomoChain technologies</div>
                 <div class="box-btn mt-3 pt-3 mt-md-5 pt-md-5">
                     <a class="btn btn-primary d-flex d-md-inline-flex align-items-center justify-content-center"
