update Link to TomoWallet, Footer links

--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
                         <div class="d-flex align-items-end box-download w-100 mt-5">
                             <div class="row">
                                 <div class="col-6 d-flex flex-wrap align-items-end">
-                                    <a class="d-block" href="#"><img src="assets/images/btn-appstore.png" alt="app store"></a>
-                                    <a class="d-block mt-3" href="#"><img src="assets/images/btn-googleplay.png" alt="app store"></a class="d-block">
+                                    <a class="d-block" href="https://apps.apple.com/us/app/tomo-wallet/id1436476145" target="_blank"><img src="assets/images/btn-appstore.png" alt="app store"></a>
+                                    <a class="d-block mt-3" href="https://play.google.com/store/apps/details?id=com.tomochain.wallet&hl=en_US" target="_blank"><img src="assets/images/btn-googleplay.png" alt="app store"></a class="d-block">
                                 </div>
-                                <div class="col-6 text-right">
-                                    <img src="assets/images/dex-verify.svg" alt="verify">
+                                <div class="col-6 text-right pl-5">
+                                    <img src="assets/images/tomowallet-qrcode.png" alt="TomoWallet qrcode">
                                 </div>
                             </div>
                         </div>
@@ -340,16 +340,16 @@
                         </div>
                         <ul class="social-list d-flex align-items-center justify-content-between mt-4">
                             <li class="social-item">
-                                <a href="" target="_blank" title="facebook"><i class="fab fa-facebook-square"></i></a>
+                                <a href="https://www.facebook.com/tomochainofficial" target="_blank" title="facebook"><i class="fab fa-facebook-square"></i></a>
                             </li>
                             <li class="social-item">
-                                <a href="" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a>
+                                <a href="https://twitter.com/TomoChainANN" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li class="social-item">
-                                <a href="" target="_blank" title="telegram"><i class="fab fa-telegram-plane"></i></a>
+                                <a href="https://t.me/TomoChainChannel" target="_blank" title="telegram"><i class="fab fa-telegram-plane"></i></a>
                             </li>
                             <li class="social-item">
-                                <a href="" target="_blank" title="github"><i class="fab fa-github"></i></a>
+                                <a href="https://github.com/tomochain" target="_blank" title="github"><i class="fab fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -380,13 +380,13 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="#">TomoChain</a>
+                                                <a href="https://tomochain.com/" target="_blank">TomoChain</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">TomoX</a>
+                                                <a href="https://dex.testnet.tomochain.com/" target="_blank">TomoX</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">TomoRelayer</a>
+                                                <a href="https://relayer.testnet.tomochain.com/" target="_blank">TomoRelayer</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -398,16 +398,16 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="#">FAQ</a>
+                                                <a href="https://docs.tomochain.com/faq" target="_blank">FAQ</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">Support Center</a>
+                                                <a href="#" target="_blank">Support Center</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">Submit a request</a>
+                                                <a href="#" target="_blank">Submit a request</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">API Documentation</a>
+                                                <a href="https://docs.tomochain.com/" target="_blank">API Documentation</a>
                                             </li>
                                         </ul>
                                     </div>
