--- a/index.html
+++ b/index.html
@@ -7,22 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <title>TomoDEX | Decentralized Exchange</title>
 
-    <title>TomoDEX - The first TomoX Decentralized Exchange</title>
+    <!-- META FOR FACEBOOK -->
+    <meta content="TomoChain" property="og:site_name"/>
+    <meta property="og:url" itemprop="url" content="https://dex.devnet.tomochain.com/"/>
+    <meta property="og:image" itemprop="thumbnailUrl" content="https://raw.githubusercontent.com/tomochain/tomox-sdk-ui/master/public/share-society.png"/>
+    <meta content="TomoDEX | Decentralized Exchange" itemprop="headline" property="og:title"/>
+    <meta content="TomoDEX is the first DEX on TomoChain, using TomoX protocol. The company that operates TomoDEX exchange is the TomoChain team. On this exchange people can trade: buy or sell their tokens." itemprop="description" property="og:description"/>
+    <!-- END META FOR FACEBOOK -->
+    <!-- Twitter Card -->
+    <meta name="twitter:card" value="summary_large_image">
+    <meta name="twitter:url" content="https://dex.devnet.tomochain.com/">
+    <meta name="twitter:title" content="TomoDEX | Decentralized Exchange">
+    <meta name="twitter:description" content="TomoDEX is the first DEX on TomoChain, using TomoX protocol. The company that operates TomoDEX exchange is the TomoChain team. On this exchange people can trade: buy or sell their tokens.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/tomochain/tomox-sdk-ui/master/public/share-society.png"/>
+    <meta name="twitter:site" content="@TomoChainANN">
+    <meta name="twitter:creator" content="@TomoChainANN">
+    <!-- End Twitter Card -->
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="assets/fonts-icon/style.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/dex-custom.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon.png">
 </head>
@@ -298,11 +309,11 @@
                         </div>
                         <div class="d-flex align-items-end box-download w-100 mt-5">
                             <div class="row">
-                                <div class="col-6 d-flex flex-wrap align-items-end">
+                                <div class="col-6 d-flex flex-wrap align-items-center">
                                     <a class="d-block" href="https://apps.apple.com/us/app/tomo-wallet/id1436476145" target="_blank"><img src="assets/images/btn-appstore.png" alt="app store"></a>
-                                    <a class="d-block mt-3" href="https://play.google.com/store/apps/details?id=com.tomochain.wallet&hl=en_US" target="_blank"><img src="assets/images/btn-googleplay.png" alt="app store"></a class="d-block">
+                                    <a class="d-block" href="https://play.google.com/store/apps/details?id=com.tomochain.wallet&hl=en_US" target="_blank"><img src="assets/images/btn-googleplay.png" alt="app store"></a class="d-block">
                                 </div>
-                                <div class="col-6 text-right pl-5">
+                                <div class="col-6 text-right">
                                     <img src="assets/images/tomowallet-qrcode.png" alt="TomoWallet qrcode">
                                 </div>
                             </div>
