Update logo & text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="/"><img src="assets/images/logo-tomo-white.png" alt="logo-tomodex"></a>
+            <a class="navbar-brand" href="/"><img src="assets/images/logo-tomochain-white.svg" alt="logo-tomodex"></a>
             <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -74,7 +74,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="#">English</a>
-                            <a class="dropdown-item" href="#">Vietname</a>
+                            <a class="dropdown-item" href="#">Vietnamese</a>
                         </div>
                     </li>
                 </ul>
@@ -200,7 +200,7 @@
     <section class="section-default">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 pr-lg-5">
                     <div class="common-preview">
                         <h2 class="common-title">How to start trading</h2>
                     </div>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="trading-preview mb-5 mb-lg-0">
                         <h3 class="tmp-title-large">No Deposit. No Withdrawal. No Risk.</h3>
-                        <p class="opacity-60">Trade directly from your wallet without any deposit/withdrawal fee.</p>
+                        <p class="opacity-60">Maintain complete custody of your tokens by trading directly from your own wallet</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -233,39 +233,39 @@
                 <h2 class="common-title text-white">Decentralized Exchange</h2>
             </div>
             <div class="row">
-                <div class="col-md-6 col-lg-3 py-4 py-md-5 pr-xl-5 d-flex d-md-block">
+                <div class="col-md-6 col-lg-3 py-4 py-md-5 d-flex d-md-block">
                     <div class="mb-md-5 size-image-exchange"><img src="assets/images/dex-real-time.svg" alt=""></div>
                     <div class="exchange-infor pl-4 pl-md-0">
                         <h3 class="tmp-title-medium text-green mb-3">Real-time Settlement</h3>
                         <p class="text-white">
-                            All the orders - once matched - are final and the tokens are deposited directly to your wallet.
+                            Enjoy a fast trading experience with all orders stored and matched on-chain, then deposited directly to the wallet
                         </p>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3 py-4 py-md-5 pr-xl-5 d-flex d-md-block">
+                <div class="col-md-6 col-lg-3 py-4 py-md-5 d-flex d-md-block">
                     <div class="mb-md-5 size-image-exchange"><img src="assets/images/dex-order-book.svg" alt=""></div>
                     <div class="exchange-infor pl-4 pl-md-0">
                         <h3 class="tmp-title-medium text-green mb-3">Decentralized Order Book</h3>
                         <p class="text-white">
-                            Enjoy high liquidity exchange with robust order pool maintained by TomoChain's 150 masternodes network.
+                            Enjoy a high liquidity exchange with a robust order pool stored on-chain and secured by TomoChain’s 150 masternodes network
                         </p>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3 py-4 py-md-5 pr-xl-5 d-flex d-md-block">
+                <div class="col-md-6 col-lg-3 py-4 py-md-5 d-flex d-md-block">
                     <div class="mb-md-5 size-image-exchange"><img src="assets/images/dex-deposit-withdrawal.svg" alt=""></div>
                     <div class="exchange-infor pl-4 pl-md-0">
-                        <h3 class="tmp-title-medium text-green mb-3">No deposit/withdrawal fee</h3>
+                        <h3 class="tmp-title-medium text-green mb-3">No Deposit/Withdrawl Fees</h3>
                         <p class="text-white">
-                            No deposit/withdrawal is required to start trading, and therefore, no unreasonable fee!
+                            No deposit/withdrawal is required to start trading, and therefore, no unreasonable fees!
                         </p>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3 py-4 py-md-5 pr-xl-5 d-flex d-md-block">
+                <div class="col-md-6 col-lg-3 py-4 py-md-5 d-flex d-md-block">
                     <div class="mb-md-5 size-image-exchange"><img src="assets/images/dex-exchange.svg" alt=""></div>
                     <div class="exchange-infor pl-4 pl-md-0">
                         <h3 class="tmp-title-medium text-green mb-3">Non-Custodian Exchange</h3>
                         <p class="text-white">
-                            TomoDEX does not store your money, all of your tokens are safe in your wallet.
+                            TomoDEX does not store your money, all of your tokens remain safe in your wallet
                         </p>
                     </div>
                 </div>
@@ -286,9 +286,7 @@
                                 <i class="dex-desktop_mac"></i> Desktop
                             </h3>
                             <p class="opacity-60">
-                                The tool for professional traders with multiple
-                                functions and more spaces for you to make
-                                your trading decisions.
+                                The tool for professional traders with multiple functions for making advanced trading decisions.
                             </p>
                         </div>
                         <div class="d-flex align-items-end w-100 mt-5">
@@ -303,8 +301,7 @@
                                 <i class="dex-stay_current_portrait"></i> Mobile
                             </h3>
                             <p class="opacity-60">
-                                Never miss out your order updates again!
-                                Trade on the way with built-in exchange on TomoWallet.
+                                Trade from anywhere with TomoDEX built right into the user-friendly TomoWallet.
                             </p>
                         </div>
                         <div class="d-flex align-items-end box-download w-100 mt-5">
@@ -347,7 +344,7 @@
                 <div class="row">
                     <div class="col-lg-3 mt-5">
                         <div class="footer-logo text-center text-md-left">
-                            <img src="assets/images/logo-tomo-black.png" alt="Tomochain">
+                            <img src="assets/images/logo-tomochain-black.svg" alt="Tomochain">
                         </div>
                         <ul class="social-list d-flex align-items-center justify-content-between mt-4">
                             <li class="social-item">
@@ -373,13 +370,13 @@
                                     <div class="menu-footermenu">
                                         <ul class="menu">
                                             <li class="menu-item">
-                                                <a href="#">Term of Service</a>
+                                                <a href="#">Terms of Service</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">Announcement</a>
+                                                <a href="#">Announcements</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="#">Fee</a>
+                                                <a href="#">Fee Structure</a>
                                             </li>
                                         </ul>
                                     </div>
